# computing-architecture-hw-1

./: CMakeLists.txt  Client.cpp  Client.h  HairdressSalon.cpp  HairdressSalon.h  README.md  calc.asm  circle.cpp  circle.h  color.h  colormod.h  container.cpp  container.h  helper.py  main.cpp  main.py  makefile  outfile1.txt  rectangle.cpp  rectangle.h  shape.cpp  shape.h  task  test.cpp  triangle.cpp  triangle.h  utils.h
figures/: circle.py  rectangle.py  triagnle.py
test/: in1.txt  in3.txt  outfile1.txt  outfile11.txt  outfile2.txt  outfile21.txt  outfile3.txt  outfile31.txt  outfile4.txt  outfile41.txt  outfile5.txt  outfile51.txt
